position fixed,  z-index, scroll-behaviour smooth

--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,7 @@
 
 html {
   font-size: 16px;
+  scroll-behavior: smooth;
 }
 body {
   font-family: "Montserrat", sans-serif;
@@ -53,6 +54,12 @@ h2 {
 header {
   background-color: #4e2a84;
   padding: 20px 0;
+
+  position: fixed;
+  /* phải set lại width vì bị pos reset */
+  z-index: 100;
+
+  width: 100%;
 }
 .header__content {
   width: 70%;
